# BSG-TestDataScience-1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile.dev  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
data/: stroke_data.h5  stroke_data_encoder.pkl
docs/: api.md  index.md
models/stroke_predictor_optuna/: MLmodel  conda.yaml  model.pkl  model_config.yml  requirements.txt
notebooks/: eda.html  eda.ipynb  evaluation.html  evaluation.ipynb
outputs/: optuna_stroke_prediction.db  optuna_stroke_prediction_results.csv
search/: search_index.json
stroke_predictor/: main.py
stroke_predictor/configs/: optuna.yml
stroke_predictor/optuna_optimization/: objective.py  runner.py
stroke_predictor/tests/: __init__.py  test_data_io.py  test_models.py  test_optuna.py  test_plotting.py  test_predictor.py  test_preprocessing.py
stroke_predictor/utils/: __init__.py  data_io.py  models.py  plotting.py  predictor.py  preprocessing.py
templates/: form.html
