[project]
name = "bsg-testdatascience-1"
version = "0.1.0"
description = "Stroke prediction classifier."
authors = [
    {name = "Borja Serrano Gonzalez", email="borja.serranog@gmail.com"},
]
packages = [
  { include = "stroke_predictor" }
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.4.0,<1.7.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "mlflow (>=3.1.0,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "types-seaborn (>=0.13.2.20250516,<0.14.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
vulture = "^2.7"
pre-commit = "^4.2.0"
pytest = "^8.2.1"
optuna-dashboard = "^0.19.0"
types-pyyaml = "^6.0.12.20250516"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
